--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,11 @@
             <artifactId>imageio-metadata</artifactId>
             <version>3.12.0</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
